--- a/logencode_flutter/android/app/src/main/res/drawable/launch_background.xml
+++ b/logencode_flutter/android/app/src/main/res/drawable/launch_background.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white" />
+    <item android:drawable="@color/logencolor" />
 
     <!-- You can insert your own image assets here -->
-    <!-- <item>
+     <item
+        android:width="100dp"
+        android:height="100dp"
+        android:gravity="center">
         <bitmap
-            android:gravity="center"
-            android:src="@mipmap/launch_image" />
-    </item> -->
+            android:gravity="fill"
+            android:src="@mipmap/ic_launcher"
+            android:mipMap="true"/>
+    </item> 
 </layer-list>
